# daily-podcaster

./: .gitignore  .replit  cli_test.py  config.py  flake.nix  main.py  models.py  pasted_text_1725653440236.txt  pasted_text_1725653452786.txt  pasted_text_1725653702244.txt  pasted_text_1725654609426.txt  pasted_text_1725655029298.txt  podcast_generator.py  pyproject.toml  text_to_speech.py  user_description.txt  web_scraper.py
anthropic_chat_completion/: chat_request.py
emails/: assistant-email.md  car-rental-email.md  casual-promotion-email-5.md  china-office-email.md  colleague-email.md  combined-issues-email.md  conference-invite.md  dating-app-email-1.md  dating-app-email-2.md  dating-app-email-3.md  dating-app-email-4.md  dating-app-email-5.md  deep-technical-email-1.md  deep-technical-email-2.md  deep-technical-email-3.md  deep-technical-email-4.md  deep-technical-email-5.md  delay-issue-email-1.md  delay-issue-email-2.md  dog-custody-email-1.md  dog-custody-email-2.md  dog-custody-email-3.md  elon-meeting-email-1.md  elon-meeting-email-10.md  elon-meeting-email-2.md  elon-meeting-email-3.md  elon-meeting-email-4.md  elon-meeting-email-5.md  elon-meeting-email-6.md  elon-meeting-email-7.md  elon-meeting-email-8.md  elon-meeting-email-9.md  ethan-chen-persona.md  flight-booking-email.md  heated-ex-email-1 (1).md  heated-ex-email-2.md  hobby-email-astronomy.md  hobby-email-hackathon.md  hotel-confirmation-email.md  junk-email-1.md  (+62 more)
openai_chat_completion/: chat_request.py
static/css/: style.css
templates/: dashboard.html  index.html  login.html  register.html
(+5 files in other folders)
