[tool.poetry]
name = "repl-nix-dailypodcaster"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
trafilatura = "^1.12.1"
openai = "^1.44.0"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
llama-index = "^0.11.6"
langchain = "^0.2.16"
requests = "^2.32.3"
firecrawl = "^1.2.3"
anthropic = "^0.34.2"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
